readOnly: true on journalpost.entity

--- a/openapi/spec3.yaml
+++ b/openapi/spec3.yaml
@@ -3398,6 +3398,7 @@ components:
             entity:
               type: string
               enum: ["Journalpost"]
+              readOnly: true
             journalaar:
               type: integer
             journalsekvensnummer:
