--- a/.github/workflows/dispatch-codegen.yml
+++ b/.github/workflows/dispatch-codegen.yml
@@ -25,6 +25,13 @@ jobs:
           repository: felleslosninger/ein-api-client-ts
           event-type: codegen
 
+      - name: Java Client
+        uses: peter-evans/repository-dispatch@v2
+        with:
+          token: ${{ steps.gh-api-token.outputs.token }}
+          repository: felleslosninger/ein-api-client-java
+          event-type: codegen
+
       - name: Backend
         uses: peter-evans/repository-dispatch@v2
         with:
