--- a/openapi/spec3.yaml
+++ b/openapi/spec3.yaml
@@ -4033,6 +4033,7 @@ components:
                 - SEKSJON
                 - BYDEL
                 - KOMMUNE
+                - DUMMYENHET
             avsluttetDato:
               type: string
               format: date
